2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/Makefile.am:
	* tests/check/gnet/gnetconn.c: (conn_cb), (test_conn),
	(gnetconn_suite), (gnetconn):
	  Add very simple test for gnet_conn_new() and running things
	  in a user-specified GMainContext.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c:
	* src/conn-http.h:
	  UTF-8-ise.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn.c: (ADD_WATCH), (REMOVE_WATCH), (gnet_conn_disconnect),
	  (conn_check_read_queue), (gnet_conn_timeout):
	  Use the configured main context (if any) to hook up or remove
	  watches and timeouts.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/inetaddr.c: (gnet_inetaddr_new_list_async_cancel),
	  (gnet_inetaddr_get_name_async_cancel):
	* src/tcp.c: (gnet_tcp_socket_new_async_cancel):
	  Remove sources from correct main context.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.c: (_gnet_idle_add_full), (_gnet_timeout_add_full),
	  (_gnet_io_watch_add_full), (_gnet_source_remove):
	* src/gnet-private.h:
	  Add private _gnet_source_remove() to remove a source by id from a
	  certain main context. Also accept NULL as context for the other
	  functions in place of the default main context.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/gnet-sections.txt:
	* src/conn.c: (gnet_conn_new_socket), (gnet_conn_set_main_context),
	  (gnet_conn_connect):
	* src/conn.h:
	  API: add gnet_conn_set_main_context()

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/tcp.c: (gnet_tcp_socket_connect),
	  (gnet_tcp_socket_connect_async_full),
	  (gnet_tcp_socket_connect_async),
	  (gnet_tcp_socket_connect_inetaddr_cb),
	  (gnet_tcp_socket_connect_tcp_cb),
	  (gnet_tcp_socket_connect_async_cancel):
	* src/tcp.h: (GTcpSocketConnectAsyncFunc):
	  API: add gnet_tcp_socket_connect_async_full().
